fix overflow for Dropdowns and Preview

--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModal.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModal.scss
@@ -31,7 +31,7 @@ $modal-padding: 16px;
   overflow: auto;
   min-height: 168px;
   max-height: 84vh;
-  max-width: 100vw;
+  max-width: 50vw;
   outline: none;
 
   &.small {
@@ -50,5 +50,11 @@ $modal-padding: 16px;
     border-radius: 0;
     min-height: 100vh;
     min-width: 100vw;
+  }
+
+  // Some modals have a dropdown that may overflow the parent container
+  // In these cases this parent container must have a visible overflow
+  &.visibleOverflow {
+    overflow: visible;
   }
 }
