--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModalBody/CWModalBody.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWModal/CWModalBody/CWModalBody.scss
@@ -4,4 +4,9 @@
   gap: 16px;
   padding: 16px;
   overflow-y: auto;
+
+  // For content that may overflow the parent container (e.g. Dropdowns)
+  &.unset {
+    overflow: unset;
+  }
 }
