--- a/packages/commonwealth/client/styles/modals/preview_modal.scss
+++ b/packages/commonwealth/client/styles/modals/preview_modal.scss
@@ -3,7 +3,6 @@
 .PreviewModal {
   max-height: 95vh;
   width: 100%;
-  overflow-y: auto;
 
   .QuillFormattedText {
     margin: 25px 0;
